--- a/riskymainpage.html
+++ b/riskymainpage.html
@@ -27,8 +27,7 @@
             <button onclick="myFunction(this)" class="dropbtn">Dice Roll: 1</button>
             <div class="dropdown-content">
                 <div class="article">
-                    <h3>What's your #1 love language?</h3>
-                    <p>For those who don't know, the 5 languages are: Words of Affirmation, Acts of Service, Receiving Gifts, Quality Time, and Physical Touch</p>
+                    <h3>Switch shirts with someone else in the circle (group choice)</h3>
                 </div>
             </div>
         </div>
@@ -36,7 +35,7 @@
             <button onclick="myFunction(this)" class="dropbtn">Dice Roll: 2</button>
             <div class="dropdown-content">
                 <div class="article">
-                    <h3>What bothers you most about your significant other (or best friend if you're single)?</h3>
+                    <h3>Display the first message that appears when you type "sex" in your search bar on messages</h3>
                 </div>
             </div>
         </div>
@@ -44,7 +43,7 @@
             <button onclick="myFunction(this)" class="dropbtn">Dice Roll: 3</button>
             <div class="dropdown-content">
                 <div class="article">
-                    <h3>What's your biggest fear?</h3>
+                    <h3>Everyone remove one article of clothing</h3>
                 </div>
             </div>
         </div>
@@ -52,7 +51,7 @@
             <button onclick="myFunction(this)" class="dropbtn">Dice Roll: 4</button>
             <div class="dropdown-content">
                 <div class="article">
-                    <h3>How many people in your group (MRun) have you had a crush on?</h3>
+                    <h3>Lip smacker (give someone a kiss)</h3>
                 </div>
             </div>
         </div>
@@ -60,7 +59,8 @@
             <button onclick="myFunction(this)" class="dropbtn">Dice Roll: 5</button>
             <div class="dropdown-content">
                 <div class="article">
-                    <h3>What's your "type"?</h3>
+                    <h3>Play one round of spin the bottle</h3>
+                    <p>May play with kiss on the cheek for more of a PG-13 version</p>
                 </div>
             </div>
         </div>
@@ -68,7 +68,7 @@
             <button onclick="myFunction(this)" class="dropbtn">Dice Roll: 6</button>
             <div class="dropdown-content">
                 <div class="article">
-                    <h3>If you could take back one thing you've done, what would it be?</h3>
+                    <h3>Kiss someone on the hand, someone on the cheek, and someone onthe forehead</h3>
                 </div>
             </div>
         </div>
@@ -76,7 +76,7 @@
             <button onclick="myFunction(this)" class="dropbtn">Dice Roll: 7</button>
             <div class="dropdown-content">
                 <div class="article">
-                    <h3>How many people in your group (MRun) have you kissed?</h3>
+                    <h3>7 minutes in heaven with group's choice</h3>
                 </div>
             </div>
         </div>
@@ -84,7 +84,7 @@
             <button onclick="myFunction(this)" class="dropbtn">Dice Roll: 8</button>
             <div class="dropdown-content">
                 <div class="article">
-                    <h3>What's something people think about you vs. what the actual truth is?</h3>
+                    <h3>Go around the circle naming someone who is significantly older than you that you would get with</h3>
                 </div>
             </div>
         </div>
@@ -92,7 +92,7 @@
             <button onclick="myFunction(this)" class="dropbtn">Dice Roll: 9</button>
             <div class="dropdown-content">
                 <div class="article">
-                    <h3>What's your biggest pet peeve?</h3>
+                    <h3>Go around the circle naming someone of the same sex who you would get with</h3>
                 </div>
             </div>
         </div>
@@ -100,7 +100,7 @@
             <button onclick="myFunction(this)" class="dropbtn">Dice Roll: 10</button>
             <div class="dropdown-content">
                 <div class="article">
-                    <h3>How many children do you want?</h3>
+                    <h3>Lick the forearm of the person on the left</h3>
                 </div>
             </div>
         </div>
@@ -108,7 +108,7 @@
             <button onclick="myFunction(this)" class="dropbtn">Dice Roll: 11</button>
             <div class="dropdown-content">
                 <div class="article">
-                    <h3>What's the craziest thing you've ever done?</h3>
+                    <h3>Keep your hand on the player of the circle's choice for a round</h3>
                 </div>
             </div>
         </div>
@@ -116,7 +116,7 @@
             <button onclick="myFunction(this)" class="dropbtn">Dice Roll: 12</button>
             <div class="dropdown-content">
                 <div class="article">
-                    <h3>What's ypir biggest insecurity?</h3>
+                    <h3>Name your least favorite member of your significant other's family (or best friend's)</h3>
                 </div>
             </div>
         </div>
