--- a/mainmenu.html
+++ b/mainmenu.html
@@ -22,6 +22,7 @@
         <li id="ssbutton" class="button"><a href="ssmainpage.html">Senior Superlatives</a></li>
         <li id="wholebutton" class="button"><a href="wholesomemainpage.html">Wholesome content</a></li>
         <li id="riskybutton" class="button"><a href="riskymainpage.html">Risky Business (only if everyone is negative for COVID)</a></li>
+        <li id="riskybutton" class="button"><a href="extras.html">Extra stuff that was added later</a></li>
     </ul>
     </div>
     <div class="play">
