--- a/extras.html
+++ b/extras.html
@@ -24,7 +24,7 @@
         </p>
         <div id="risky">
         <div class="dropdown">
-            <button onclick="myFunction(this)" class="dropbtn">Prompt</button>
+            <button onclick="myFunction(this)" class="dropbtn">1</button>
             <div class="dropdown-content">
                 <div class="article">
                     <h3>Vote on the player with the most complicated love life - loser takes 2 drinks</h3>
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="dropdown">
-            <button onclick="myFunction(this)" class="dropbtn">Prompt</button>
+            <button onclick="myFunction(this)" class="dropbtn">2</button>
             <div class="dropdown-content">
                 <div class="article">
                     <h3>Drink if you've ever kissed someone that another player has also kissed</h3>
@@ -40,7 +40,7 @@
             </div>
         </div>
         <div class="dropdown">
-            <button onclick="myFunction(this)" class="dropbtn">Prompt</button>
+            <button onclick="myFunction(this)" class="dropbtn">3</button>
             <div class="dropdown-content">
                 <div class="article">
                     <h3>Take 2 drinks if you've ever sucked a dick or eaten someone out</h3>
@@ -48,7 +48,7 @@
             </div>
         </div>
         <div class="dropdown">
-            <button onclick="myFunction(this)" class="dropbtn">Prompt</button>
+            <button onclick="myFunction(this)" class="dropbtn">4</button>
             <div class="dropdown-content">
                 <div class="article">
                     <h3>Vote on which player gets laid the least - loser drinks twice</h3>
@@ -56,7 +56,7 @@
             </div>
         </div>
         <div class="dropdown">
-            <button onclick="myFunction(this)" class="dropbtn">Prompt</button>
+            <button onclick="myFunction(this)" class="dropbtn">5</button>
             <div class="dropdown-content">
                 <div class="article">
                     <h3>Play one round of spin the bottle</h3>
@@ -65,7 +65,7 @@
             </div>
         </div>
         <div class="dropdown">
-            <button onclick="myFunction(this)" class="dropbtn">Prompt</button>
+            <button onclick="myFunction(this)" class="dropbtn">6</button>
             <div class="dropdown-content">
                 <div class="article">
                     <h3>Kiss the player to your left or right, or take 4 drinks</h3>
@@ -73,7 +73,7 @@
             </div>
         </div>
         <div class="dropdown">
-            <button onclick="myFunction(this)" class="dropbtn">Prompt</button>
+            <button onclick="myFunction(this)" class="dropbtn">7</button>
             <div class="dropdown-content">
                 <div class="article">
                     <h3>Drink if you've had an orgasm this week</h3>
@@ -81,7 +81,7 @@
             </div>
         </div>
         <div class="dropdown">
-            <button onclick="myFunction(this)" class="dropbtn">Prompt</button>
+            <button onclick="myFunction(this)" class="dropbtn">8</button>
             <div class="dropdown-content">
                 <div class="article">
                     <h3>Go around the circle naming someone who is significantly older than you that you would get with</h3>
@@ -89,7 +89,7 @@
             </div>
         </div>
         <div class="dropdown">
-            <button onclick="myFunction(this)" class="dropbtn">Prompt</button>
+            <button onclick="myFunction(this)" class="dropbtn">9</button>
             <div class="dropdown-content">
                 <div class="article">
                     <h3>Search "sex" in your message history and read tha last text message you have or finish your drink</h3>
@@ -97,7 +97,7 @@
             </div>
         </div>
         <div class="dropdown">
-            <button onclick="myFunction(this)" class="dropbtn">Prompt</button>
+            <button onclick="myFunction(this)" class="dropbtn">10</button>
             <div class="dropdown-content">
                 <div class="article">
                     <h3>Players in this room who have ever kissed each other, kiss again or drink</h3>
@@ -105,7 +105,7 @@
             </div>
         </div>
         <div class="dropdown">
-            <button onclick="myFunction(this)" class="dropbtn">Prompt</button>
+            <button onclick="myFunction(this)" class="dropbtn">11</button>
             <div class="dropdown-content">
                 <div class="article">
                     <h3>Guys, show us your booty and girls, vote on whose is the best! Winner hands out three drinks</h3>
@@ -113,7 +113,7 @@
             </div>
         </div>
         <div class="dropdown">
-            <button onclick="myFunction(this)" class="dropbtn">Prompt</button>
+            <button onclick="myFunction(this)" class="dropbtn">12</button>
             <div class="dropdown-content">
                 <div class="article">
                     <h3>Everyone take off an item of clothing</h3>
@@ -121,7 +121,7 @@
             </div>
         </div>
         <div class="dropdown">
-            <button onclick="myFunction(this)" class="dropbtn">Prompt</button>
+            <button onclick="myFunction(this)" class="dropbtn">13</button>
             <div class="dropdown-content">
                 <div class="article">
                     <h3>Player who had sex most recently gives out four drinks</h3>
@@ -129,7 +129,7 @@
             </div>
         </div>
         <div class="dropdown">
-            <button onclick="myFunction(this)" class="dropbtn">Prompt</button>
+            <button onclick="myFunction(this)" class="dropbtn">14</button>
             <div class="dropdown-content">
                 <div class="article">
                     <h3>Where's the weirdest place you've had sex (or made out if you are a virgin)? Weirdest hands out 3 drinks</h3>
@@ -137,7 +137,7 @@
             </div>
         </div>
         <div class="dropdown">
-            <button onclick="myFunction(this)" class="dropbtn">Prompt</button>
+            <button onclick="myFunction(this)" class="dropbtn">15</button>
             <div class="dropdown-content">
                 <div class="article">
                     <h3>Lick another player's elbow</h3>
@@ -145,7 +145,7 @@
             </div>
         </div>
         <div class="dropdown">
-            <button onclick="myFunction(this)" class="dropbtn">Prompt</button>
+            <button onclick="myFunction(this)" class="dropbtn">16</button>
             <div class="dropdown-content">
                 <div class="article">
                     <h3>Player who most recently watched porn, give out 3 drinks</h3>
@@ -153,7 +153,7 @@
             </div>
         </div>
         <div class="dropdown">
-            <button onclick="myFunction(this)" class="dropbtn">Prompt</button>
+            <button onclick="myFunction(this)" class="dropbtn">17</button>
             <div class="dropdown-content">
                 <div class="article">
                     <h3>Girls, take 1 drink per cup size (A=1, B=2, etc.)</h3>
@@ -161,7 +161,7 @@
             </div>
         </div>
         <div class="dropdown">
-            <button onclick="myFunction(this)" class="dropbtn">Prompt</button>
+            <button onclick="myFunction(this)" class="dropbtn">18</button>
             <div class="dropdown-content">
                 <div class="article">
                     <h3>Guys, take as many drinks as there are hot girls in the room</h3>
@@ -169,7 +169,7 @@
             </div>
         </div>
         <div class="dropdown">
-            <button onclick="myFunction(this)" class="dropbtn">Prompt</button>
+            <button onclick="myFunction(this)" class="dropbtn">19</button>
             <div class="dropdown-content">
                 <div class="article">
                     <h3>What's your favorite sex position?</h3>
